--- a/GameLib/GameLib/GameLib.vcxproj
+++ b/GameLib/GameLib/GameLib.vcxproj
@@ -173,6 +173,7 @@
     <ClCompile Include="Queen.cpp" />
     <ClCompile Include="Rook.cpp" />
     <ClCompile Include="StillCheckException.cpp" />
+    <ClCompile Include="Timer.cpp" />
     <ClCompile Include="TurnException.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -209,6 +210,7 @@
     <ClInclude Include="Queen.h" />
     <ClInclude Include="Rook.h" />
     <ClInclude Include="StillCheckException.h" />
+    <ClInclude Include="Timer.h" />
     <ClInclude Include="TurnException.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
