--- a/GameLib/GameUI/GameUI.vcxproj.filters
+++ b/GameLib/GameUI/GameUI.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClCompile Include="GameUI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <QtRcc Include="images.qrc">
+      <Filter>Resource Files</Filter>
+    </QtRcc>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
