--- a/GameLib/GameLib/GameLib.vcxproj
+++ b/GameLib/GameLib/GameLib.vcxproj
@@ -196,6 +196,7 @@
     <ClInclude Include="InTheWayException.h" />
     <ClInclude Include="IPiece.h" />
     <ClInclude Include="IPieceInfo.h" />
+    <ClInclude Include="ITimerInfo.h" />
     <ClInclude Include="King.h" />
     <ClInclude Include="Knight.h" />
     <ClInclude Include="MoveException.h" />
